syntax = "proto3";

package subcategory_v1;

option go_package = "github.com/Kosfedev/learn_go/pkg/subcategory_v1;subcategory_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Service Api"
    version: "1.0"
  }
  tags: {
    name: "Subcategory"
    description: "Операции с подкатегориями"
  }
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

service SubcategoryV1 {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/subcategory"
      body: "*"
    };
  };
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/api/v1/subcategory/{id}"
    };
  };
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/api/v1/subcategory/{id}"
      body: "*"
    };
  };
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/api/v1/subcategory/{id}"
    };
  };
}

message Subcategory {
  int64 id = 1;
  string name = 2;
  int64 categoryId = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateRequest {
  string name = 1;
  int64 categoryId = 2;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

// TODO: replace
message GetResponse {
  int64 id = 1;
  string name = 2;
  int64 categoryId = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.Int64Value categoryId = 3;
}

message UpdateResponse {
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResponse {
}

